Project area updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="top-nav">
             <div class="top-nav-right">
                 <a class="menu-list" href="./index.html">Home</a>
-                <a class="menu-list" href="./blog.html">Blog</a>
+                <!-- <a class="menu-list" href="./blog.html">Blog</a> -->
                 <a class="menu-list" href="./projects.html">Projects</a>
                 <a class="menu-list" href="./resume.html">Resume</a>
             </div>
