--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="nav" id="nav">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./blog.html">Blog</a></li>
+                <!-- <li><a href="./blog.html">Blog</a></li> -->
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./resume.html">Resume</a></li>
             </ul>
@@ -32,34 +32,34 @@
                 <!-- python -->
                 <div class="band">
                 <div class="item-1">
-                        <a href="#" class="card">
+                        <a href="https://summer2021-app.vercel.app/" class="card">
                         <div class="thumb" style="background-image: url(./images/SummerProject21.png);"></div>
                         <article>
-                            <h1>Lunar Land</h1>
+                            <h1>Resume Generator</h1>
                             <div>
                                 <div class="line-top"></div>
                             </div>
-                            <p class = "description-text">Game built on Python</p>
+                            <p class = "description-text">Resume Generator I built using the React framework</p>
                             <div>
                                 <div class="line-bottom"></div>
                             </div>
-                            <span class = "lang-used">python</span>
+                            <span class = "lang-used">React, HTML, CSS, JavaScript</span>
                         </article>
                         </a>
                 </div>
                 <div class="item-2">
-                        <a href="#" class="card">
-                        <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
+                        <a href="./pdfFiles/Dominguez,Jonathan-FinalPaper.pdf" download class="card">                        
+                        <div class="thumb" style="background-image: url(./images/CNNimage.jpg);"></div>
                         <article>
-                            <h1>Todo List</h1>
+                            <h1>Machine learning paper proposal</h1>
                             <div>
                                 <div class="line-top"></div>
                             </div>
-                            <p class = "description-text">Game built on Python</p>
+                            <p class = "description-text">My final paper for my machine learning class proposing a simulation of a convolutional neural network that identifies damage within reinforced concrete using radiographs.</p>
                             <div>
                                 <div class="line-bottom"></div>
                             </div>
-                            <span class = "lang-used">HTML5, CSS, JavaScript, Node.js, Express.js, Mondo.db</span>
+                            <span class = "lang-used">convolutional neural network, machine learning</span>
                         </article>
                         </a>
                 </div>
@@ -67,68 +67,17 @@
                     <a href="#" class="card">
                     <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
                     <article>
-                        <h1>Movie Blog</h1>
+                        <h1>In progress</h1>
                         <div>
                             <div class="line-top"></div>
                         </div>
-                        <p class = "description-text">Game built on Python</p>
+                        <p class = "description-text">In progress</p>
                         <div>
                             <div class="line-bottom"></div>
                         </div>
-                        <span class = "lang-used">Mongo.db, Express.js, React, Node.js</span>
+                        <span class = "lang-used">In progress</span>
                     </article>
                     </a>
-                </div>
-                <div class="item-4">
-                        <a href="#" class="card">
-                        <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
-                        <article>
-                            <h1>Party Blog</h1>
-                            <div>
-                                <div class="line-top"></div>
-                            </div>
-                            <p class = "description-text">Game built on Python</p>
-                            <div>
-                                <div class="line-bottom"></div>
-                            </div>
-                            <span class = "lang-used">HTML5, CSS, JavaScript, Node.js, Express.js, Mondo.db</span>
-                        </article>
-                        </a>
-                </div>
-                <div class="item-5">
-                        <a href="#" class="card">
-                        <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
-                        <article>
-                            <h1>Desk Calculator</h1>
-                            <div>
-                                <div class="line-top"></div>
-                            </div>
-                            <p class = "description-text">Game built on Python</p>
-                            <div>
-                                <div class="line-bottom"></div>
-                            </div>
-                            <span class = "lang-used">Python, PyQt</span>
-                        </article>
-                        </a>
-                </div>
-                <div class="item-6">
-                    <a href="#" class="card">
-                    <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
-                    <article>
-                        <h1>?</h1>
-                        <span>?</span>
-                    </article>
-                    </a>
-                </div>
-                <div class="item-7">
-                    <a href="#" class="card">
-                    <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
-                    <article>
-                        <h1>?</h1>
-                        <span>?</span>
-                    </article>
-                    </a>
-                </div>
                 </div>
             </div>
         </div>
