--- a/index.html
+++ b/index.html
@@ -3,39 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/index.css" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Jonathan</title>
+    <link rel="icon" type="image/x-icon" href="./images/SniffFaviconLogo.png" sizes="96x96">
 </head>
-	<body> 
-        <!-- Navbar -->
-        <div class="top-nav">
-            <div class="top-nav-right">
-                <a class="menu-list" href="./index.html">Home</a>
-                <!-- <a class="menu-list" href="./blog.html">Blog</a> -->
-                <a class="menu-list" href="./projects.html">Projects</a>
-                <a class="menu-list" href="./resume.html">Resume</a>
+	<body>
+        <!-- Nav -->
+        <div id="menu-bar">
+            <div id="menu" onclick="onClickMenu()">
+                <div id="bar1" class="bar"></div>
+                <div id="bar2" class="bar"></div>
+                <div id="bar3" class="bar"></div>
+            </div>
+            <ul class="nav" id="nav">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="./resume.html">Resume</a></li>
+            </ul>
+        </div>
+        <!-- Body -->
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="./images/ProfilePicBlackWhite.jpeg" id="image-of-me">
+            </div>
+            <div class="grid-item" id="Right-section-div">
+                <!-- Scrollable Section -->
+                <div id="Scroll-div">
+                    <p id="title-name">Jonathan Dominguez</p>
+                    <div id="BreakAndInfo">
+                        <p id="text-info-about"> Front-end Web Developer | Machine Learning | Junior Software Engineer</p>
+                        <hr id="break-line-above">
+                    </div>
+                    <p id="about-me">I'm from South Los Angeles. I first began my coding journey back in 2013 before entering my freshman year of High School, when I took a summer boot camp on tech startups. That year I learned how to create my own website using HTML, CSS, and JavaScript; however, my role that summer was as a UI/UX designer. It was not until the summer after my sophomore year of high school did I take up the Swift coding language. Throughout that summer, I created an iOS app with little functionality as it was my first time taking up an object-oriented language. Since those summers, I have not looked back I am now currently attending UC Santa Cruz studying Cognitive Science.</p>
+                </div>
             </div>
         </div>
-        <!-- Text Area -->
-        <div class="main-Box">
-            <hr id="break-line-above">
-            <!-- Intro -->
-            <div class="intro-text-box">
-                <h1 class="sub-title"> Hello, my name is <strong id = "name-strong">Jonathan Dominguez.</strong> <br /> I'm a front-end web developer and junior software engineer.</h1>
-            </div>
-            <!-- About me -->
-            <div class="about-me-text">
-                <p> I'm from South Los Angeles. I first began my coding journey back in 2013 before entering my freshman year of High School, when I took a summer boot camp on tech startups. That year I learned how to create my own website using HTML, CSS, and JavaScript; however, my role that summer was as a UI/UX designer. It was not until the summer after my sophomore year of high school did I take up the Swift coding language. Throughout that summer, I created an iOS app with little functionality as it was my first time taking up an object-oriented language. Since those summers, I have not looked back I am now currently attending UC Santa Cruz studying Cognitive Science. 
-            </div>
-        </div>
-        <!-- Scripts -->
-		<script src="./scripts/index.js"></script>
-            <!-- Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
 </html>
